[package]
name = "interp"
version = "2.1.2"
authors = ["Lucas Jansen <7199136+staticintlucas@users.noreply.github.com>"]
description = "A Rust implementation of Matlab's interp1 function"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/staticintlucas/interp-rs"
keywords = ["interp", "interp1", "linear", "interpolation", "numeric"]
categories = ["algorithms", "mathematics", "rust-patterns"]
edition = "2018"
rust-version = "1.63"

[dependencies]
itertools = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
isclose = "0.1"
